@@ -74,11 +74,6 @@ public abstract class BufferIORequest extends WorkRequest
 	 * Buffer boolean property set when an error occurs.
 	 */
 	public static final String ERROR_OCCURRED = "BufferIORequest__error";
-
-	// These are no longer used but still here only for compatibility.
-	@Deprecated public static final int GZIP_MAGIC_1 = 0x1f;
-	@Deprecated public static final int GZIP_MAGIC_2 = 0x8b;
-
 	//}}}
 
 	//{{{ Instance variables
